# disbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  biome.json  docker-compose.dev.yml  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.test.ts  app.ts  auth.test.ts  bot.test.ts  bot.ts  errors.ts  index.ts  validate.test.ts  validate.ts
apps/api/src/auth/: cookies.test.ts  cookies.ts  passwords.test.ts  passwords.ts  public-user.ts  redis-session-store.test.ts  redis-session-store.ts  require-auth.ts  router.ts  session-store.test.ts  session-store.ts
apps/api/src/crypto/: token-crypto.test.ts  token-crypto.ts
apps/api/test/: app-harness.ts  setup-bun-shim.ts
apps/orchestrator/: Cargo.toml  Dockerfile  package.json
apps/orchestrator/src/: main.rs
apps/runtime/: Cargo.toml  Dockerfile  package.json
apps/runtime/src/: main.rs
apps/web/: Dockerfile  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: router.tsx
apps/web/src/lib/: api.server.ts  api.test.ts  api.ts
apps/web/src/routes/: __root.tsx  _auth.login.tsx  _auth.register.tsx  _auth.tsx  (+2 more)
crates/codegen/: Cargo.toml
crates/codegen/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: dsl.rs
crates/shared/tests/: dsl.rs
docs/adr/: 0001-twilight-for-runtimes.md  0002-tanstack-start-for-dashboard.md  0003-docker-container-per-runtime.md
tests/: docker-compose.test.ts  package.json  tsconfig.json  vitest.config.ts
