[package]
name = "disbot-runtime"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "disbot-runtime"
path = "src/main.rs"

[dependencies]
disbot-shared = { path = "../../crates/shared" }

[dev-dependencies]
serde_json = { workspace = true }
