[package]
name = "disbot-codegen"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "disbot-codegen"
path = "src/main.rs"

[dependencies]
typify = "0.4"
schemars = "1.0"
serde_json = { workspace = true }
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
