[package]
name = "disbot-codegen"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "disbot-codegen"
path = "src/main.rs"

[dependencies]
typify = "0.6"
schemars = "0.8"
serde_json = { workspace = true }
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
